--- a/app/src/main/res/layout/rv_cart.xml
+++ b/app/src/main/res/layout/rv_cart.xml
@@ -63,6 +63,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:text="@string/plus"
+            android:textColor="@color/pink_700"
             android:background="@drawable/cart_product_counter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +87,7 @@
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/cart_product_counter"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/pink_700"
             android:text="@string/minus"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/txt_counter"
