--- a/app/src/main/res/drawable/cart_product_counter.xml
+++ b/app/src/main/res/drawable/cart_product_counter.xml
@@ -7,7 +7,7 @@
         android:height="40dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/pink_700" />
     <solid
         android:color="@color/white"/>
 
