--- a/app/src/main/res/layout/rv_home_variety.xml
+++ b/app/src/main/res/layout/rv_home_variety.xml
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txt_product_name"
             app:srcCompat="@drawable/baseline_favorite"
-            app:tint="@color/red" />
+            app:tint="@color/pink_500" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
