--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,21 +45,21 @@
                     android:id="@+id/chip_all_glasses"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/all_glasses" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_transparent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/transparent" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_sunglass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/sun_glass" />
 
             </com.google.android.material.chip.ChipGroup>
@@ -82,7 +82,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/variety_of_products"
-                android:textColor="@color/black"
+                android:textColor="@color/pink_500"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -115,21 +115,21 @@
                     android:id="@+id/chip_all_shoes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/all_shoes" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_nike"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/nike" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_adidas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
+                    style="@style/CustomChipStyle"
                     android:text="@string/adidas" />
 
             </com.google.android.material.chip.ChipGroup>
