--- a/app/src/main/res/layout/fragment_phone_auth.xml
+++ b/app/src/main/res/layout/fragment_phone_auth.xml
@@ -7,30 +7,40 @@
     android:padding="16dp"
     tools:context=".ui.fragments.product.PhoneAuthFragment">
 
-    <EditText
-        android:id="@+id/edt_phone"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ti_phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:autofillHints="phone"
-        android:hint="@string/enter_you_phone_number"
-        android:inputType="phone"
+        style="@style/CustomTextInputLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_country_code"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
+        <EditText
+            android:id="@+id/edt_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:autofillHints="phone"
+            android:hint="@string/enter_you_phone_number"
+            android:inputType="phone" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_send_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/send_otp"
-        android:textAllCaps="false"
+        style="@style/CustomButton"
+        android:background="@drawable/custom_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/ti_phone" />
 
     <TextView
         android:id="@+id/txt_country_code"
@@ -40,9 +50,9 @@
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/edt_phone"
+        app:layout_constraintBottom_toBottomOf="@+id/ti_phone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edt_phone" />
+        app:layout_constraintTop_toTopOf="@+id/ti_phone" />
 
     <ProgressBar
         android:id="@+id/pb_phone_auth"
@@ -54,6 +64,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/ti_phone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
