--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,12 @@
         <item name="hintTextColor">@color/pink_700</item>
     </style>
     
+    <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/pink_500</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:checkable">true</item>
+    </style>
+    
     <style name="fullScreenActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowFullscreen">true</item>
     </style>
