--- a/app/src/main/res/navigation/fav_nav_graph.xml
+++ b/app/src/main/res/navigation/fav_nav_graph.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_wishlist" >
         <action
             android:id="@+id/action_favFragment_to_detailsFragment2"
-            app:destination="@id/detailsFragment2" />
+            app:destination="@id/detailsFragment2"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment2"
