--- a/app/src/main/res/layout/fragment_phone_auth.xml
+++ b/app/src/main/res/layout/fragment_phone_auth.xml
@@ -7,63 +7,59 @@
     android:padding="16dp"
     tools:context=".ui.fragments.product.PhoneAuthFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ti_phone"
+
+    <EditText
+        android:id="@+id/edt_phone"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/CustomTextInputLayout"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:autofillHints="phone"
+        android:background="@drawable/custom_input"
+        android:hint="@string/enter_you_phone_number"
+        android:inputType="phone"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_country_code"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/edt_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:autofillHints="phone"
-            android:hint="@string/enter_you_phone_number"
-            android:inputType="phone" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_send_otp"
+        style="@style/CustomButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/send_otp"
-        style="@style/CustomButton"
+        android:layout_marginTop="8dp"
         android:background="@drawable/custom_button"
+        android:text="@string/send_otp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_phone" />
+        app:layout_constraintTop_toBottomOf="@id/edt_phone" />
 
     <TextView
         android:id="@+id/txt_country_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="@string/_880"
         android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ti_phone"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_phone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ti_phone" />
+        app:layout_constraintTop_toTopOf="@+id/edt_phone" />
 
     <ProgressBar
         android:id="@+id/pb_phone_auth"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
