--- a/app/src/main/res/layout/rv_home_shoe.xml
+++ b/app/src/main/res/layout/rv_home_shoe.xml
@@ -64,6 +64,17 @@
             app:srcCompat="@drawable/baseline_favorite"
             app:tint="@color/pink_500" />
 
+        <ImageView
+            android:id="@+id/img_delete_product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/img_product"
+            app:layout_constraintTop_toTopOf="@+id/img_product"
+            app:srcCompat="@drawable/baseline_delete" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
