--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha=".5"
-        android:text="No item"
+        android:text="No cart items"
         android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="gone"
